mongo working api update

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=8080
+CLOUDINARY_NAME=dxw5vjyq4
+CLOUDINARY_API_KEY=477939136614997
+CLOUDINARY_API_SECRET=IFcRbJ17m6RgsEJxtOJkAXMYlyk
+JWT_SECRET=team404
+MONGO_URI=mongodb+srv://team404:team404@cluster0.zkr3acb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
